fix: fixed overflowing text in editor issue.

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import '@liveblocks/react-ui/styles.css';
-@import '@liveblocks/react-lexical/styles.css';
+@import "@liveblocks/react-ui/styles.css";
+@import "@liveblocks/react-lexical/styles.css";
 
-@import '../styles/dark-theme.css';
+@import "../styles/dark-theme.css";
 
 /* ========================================== TAILWIND STYLES */
 @layer base {
@@ -36,6 +36,16 @@
 }
 
 @layer utilities {
+  /* Hide scrollbar for Chrome, Safari, and Opera */
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge, and Firefox */
+  .scrollbar-hidden {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   .text-28-semibold {
     @apply text-[28px] font-semibold;
   }
@@ -228,19 +238,19 @@
   --lb-foreground-moderate: #fff;
 }
 
-.lb-button:where([data-variant='primary']) {
+.lb-button:where([data-variant="primary"]) {
   background-color: #161e30;
   color: #b4c6ee;
   padding: 8px;
 }
 
 .lb-button:where(
-    [data-variant='default']:not(
+    [data-variant="default"]:not(
         :is(
             :enabled:hover,
             :enabled:focus-visible,
-            [aria-expanded='true'],
-            [aria-selected='true']
+            [aria-expanded="true"],
+            [aria-selected="true"]
           )
       )
   ) {
@@ -250,8 +260,8 @@
 .lb-button:where(
     :enabled:hover,
     :enabled:focus-visible,
-    [aria-expanded='true'],
-    [aria-selected='true']
+    [aria-expanded="true"],
+    [aria-selected="true"]
   ) {
   --lb-button-background: #161e30;
 
